kubernates/app-ingress/namespace.yml
#create a namespace for ingress
apiVersion: v1
kind: Namespace
metadata:
    name: ingress
---
